--- a/config/config.properties
+++ b/config/config.properties
@@ -3,7 +3,10 @@ jdbc.url=jdbc:mysql://sisko:3306/beehive?autoReconnect=true&useUnicode=true&char
 jdbc.username=beehive
 jdbc.password=beehive
 
-proxy.hostname=79.208.116.146
+proxy.hostname=192.168.100.30
 proxy.timeout=10000
 proxy.port=
 proxy.clientPortRange=
+proxy.useSSL=true
+proxy.keystore=/keystore.ks
+proxy.keystorePassword=storepass
