--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
             xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee  
                  http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">  
-   <display-name>DeviceDiscovery Service</display-name>  
+   <display-name>Controller Proxy And Command Service</display-name>  
   
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -22,13 +22,13 @@
   </context-param>
   
   <servlet>
-    <servlet-name>deviceDiscoveryService</servlet-name>
+    <servlet-name>controllerProxyAndCommandService</servlet-name>
     <servlet-class>org.restlet.ext.spring.SpringServerServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>deviceDiscoveryService</servlet-name>
+    <servlet-name>controllerProxyAndCommandService</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
