--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
             xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee  
                  http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">  
-   <display-name>Controller Proxy And Command Service</display-name>  
+   <display-name>DeviceDiscovery Service</display-name>  
   
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -22,13 +22,13 @@
   </context-param>
   
   <servlet>
-    <servlet-name>controllerProxyAndCommandService</servlet-name>
+    <servlet-name>deviceDiscoveryService</servlet-name>
     <servlet-class>org.restlet.ext.spring.SpringServerServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>controllerProxyAndCommandService</servlet-name>
+    <servlet-name>deviceDiscoveryService</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
@@ -69,7 +69,7 @@
     <!-- User roles required to access CCS resources... -->
 
     <auth-constraint>
-      <role-name>ROLE_ADMIN</role-name>
+      <role-name>account-owner</role-name>
     </auth-constraint>
 
   </security-constraint>
@@ -87,10 +87,10 @@
   <security-role>
 
     <description>
-      ROLE_ADMIN is the administrator role for a specific account (it's the account owner).
+      account-owner is the administrator role for a specific account.
     </description>
 
-    <role-name>ROLE_ADMIN</role-name>
+    <role-name>account-owner</role-name>
 
   </security-role>
   
