--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,6 @@ restletJsonVersion = 2.0
 log4jVersion = 1.2.16
 commonsLangVersion = 2.4
 commonsCodecVersion = 1.3
+commonsDbcpVersion = 1.2.1
 
 junitVersion = 4.10
