--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,6 @@ log4jVersion = 1.2.16
 commonsLangVersion = 2.4
 commonsCodecVersion = 1.3
 commonsDbcpVersion = 1.2.1
+mysqlConnectorVersion = 5.1.17
 
 junitVersion = 4.10
