--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,17 @@ projectVersion = 1.0.0
 
 servletVersion = 3.1.0
 flexjsonVersion = 2.1
-hibernateVersion = 3.6.3.Final
+hibernateVersion = 4.3.11.Final
 springVersion = 3.1.1.RELEASE
 restletVersion = 2.0.11
 restletJsonVersion = 2.0
 log4jVersion = 1.2.16
+slf4jVersion = 1.7.10
 commonsLangVersion = 2.4
 commonsCodecVersion = 1.3
 commonsDbcpVersion = 1.2.1
 mysqlConnectorVersion = 5.1.17
+jaxrsVersion = 2.0.1
+jerseyVersion = 2.22
 
 junitVersion = 4.10
