--- a/src/main/webapp/WEB-INF/classes/config.properties
+++ b/src/main/webapp/WEB-INF/classes/config.properties
@@ -1,7 +1,4 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/beehivet?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-jdbc.username=beehive
-jdbc.password=beehive
+persistenceUnitName=CCS-MySQL
 
 proxy.hostname=localhost
 proxy.timeout=10000
