--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     compile "net.sf.flexjson:flexjson:$flexjsonVersion"
     
     compile "org.slf4j:slf4j-api:$slf4jVersion"
-    
+    compile "ch.qos.logback:logback-classic:1.1.3"
+
     compile "org.glassfish.jersey.containers:jersey-container-servlet-core:$jerseyVersion"
     compile "javax.ws.rs:javax.ws.rs-api:$jaxrsVersion"
     
@@ -33,8 +34,6 @@ dependencies {
     
     compile "mysql:mysql-connector-java:$mysqlConnectorVersion"
     
-
-    compile "log4j:log4j:$log4jVersion"
     compile "commons-lang:commons-lang:$commonsLangVersion"
     compile "commons-codec:commons-codec:$commonsCodecVersion"
     compile "commons-dbcp:commons-dbcp:$commonsDbcpVersion"
