Getting websocket server working

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile "org.springframework.security:spring-security-core:$springVersion"
 
     providedCompile "javax.servlet:javax.servlet-api:$servletVersion"
+    providedCompile "javax:javaee-api:$javaeeApiVersion"
 
     testCompile "junit:junit:$junitVersion"
 }
@@ -84,10 +85,34 @@ war {
 apply plugin: "com.bmuschko.docker-remote-api"
 
 docker {
-    url = "$System.env.DOCKER_HOST".replace("tcp:", "https:")
-    certPath = new File("$System.env.DOCKER_CERT_PATH")
+    url = dockerHostUrl()
+    certPath = dockerCertPath()
 }
 
+URI dockerHostEnv() {
+    String uri = System.getenv('DOCKER_HOST')
+    uri ? new URI(uri) : null
+}
+
+String dockerHostUrl() {
+    if (dockerHostEnv()) {
+        URI uri = dockerHostEnv()
+        if (uri.scheme == 'unix') {
+            uri
+        } else if (uri.scheme == 'tcp') {
+            (new URI(uri.scheme != 'tcp' ?: 'https' , uri.userInfo, uri.host, uri.port, uri.path, uri.query, uri.fragment)).toString()
+        }
+    } else {
+        org.gradle.internal.os.OperatingSystem.current().isLinux()
+        ? 'unix:///var/run/docker.sock'
+        : 'http://localhost:2375'
+    }
+}
+
+File dockerCertPath() {
+    String certPathEnv = System.getenv('DOCKER_CERT_PATH')
+    certPathEnv ? file(certPathEnv) : null;
+}
 
 import com.bmuschko.gradle.docker.tasks.image.*
 
@@ -100,5 +125,5 @@ task createDockerFile(type:Dockerfile, dependsOn: war) {
 task buildImage(type: DockerBuildImage, dependsOn: createDockerFile) {
     inputDir = projectDir
     dockerFile = createDockerFile.destFile
-    tag = 'openremote/ccs-test'
+    tag = 'openremote/ccs'
 }
