--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ commonsDbcpVersion = 1.2.1
 mysqlConnectorVersion = 5.1.17
 jaxrsVersion = 2.0.1
 jerseyVersion = 2.22
+javaeeApiVersion = 7.0
 
 junitVersion = 4.10
