Getting websocket server working  - handle initiate proxy command  - change server name on oxxx-docker

--- a/environments/oxxx-docker/config.properties
+++ b/environments/oxxx-docker/config.properties
@@ -1,6 +1,6 @@
 persistenceUnitName=CCS-MySQL
 
-proxy.hostname=oxxxtest
+proxy.hostname=ccs.or
 proxy.timeout=10000
 proxy.port=10000
 proxy.clientPortRange=30000-30010
