Add hooks on open and close WS connection to send information to a json endpoint (WIP)

--- a/environments/oxxx-docker/config.properties
+++ b/environments/oxxx-docker/config.properties
@@ -7,3 +7,7 @@ proxy.clientPortRange=30000-30010
 proxy.useSSL=true
 proxy.keystore=/usr/local/tomcat/keystore.ks
 proxy.keystorePassword=storepass
+
+wsHook.baseUri=http://172.17.0.1:3000
+wsHook.openPath=/open
+wsHook.closePath=/close
