Add hooks on open and close WS connection to send information to a json endpoint (WIP)

--- a/environments/oxxx-docker/config.properties
+++ b/environments/oxxx-docker/config.properties
@@ -11,3 +11,4 @@ proxy.keystorePassword=storepass
 wsHook.baseUri=http://172.17.0.1:3000
 wsHook.openPath=/open
 wsHook.closePath=/close
+ccs.ip=172.17.0.3
