--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.1.3"
 
     compile "org.glassfish.jersey.containers:jersey-container-servlet-core:$jerseyVersion"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
     compile "javax.ws.rs:javax.ws.rs-api:$jaxrsVersion"
     
     compile "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final"
