Add hooks on open and close WS connection to send information to a json endpoint
Add endpoint to get connected controllers

--- a/environments/oxxx-docker/config.properties
+++ b/environments/oxxx-docker/config.properties
@@ -11,4 +11,5 @@ proxy.keystorePassword=storepass
 wsHook.baseUri=http://172.17.0.1:3000
 wsHook.openPath=/open
 wsHook.closePath=/close
+wsHook.retryTimeout=30000
 ccs.ip=172.17.0.3
