Correct websocket close hook payload Adding hook for executeController response /executeCommandResponse

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     providedCompile "javax:javaee-api:$javaeeApiVersion"
 
     testCompile "junit:junit:$junitVersion"
+    testCompile "org.mockito:mockito-core:$mockitoVersion"
 }
 
 war {
