--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ jerseyVersion = 2.22
 javaeeApiVersion = 7.0
 
 junitVersion = 4.10
-mockitoVersion = 1.6
+mockitoVersion = 2.8.47
+powermockVersion = 1.7.0
