Adding Test Correct payload

--- a/environments/oxxx-docker/config.properties
+++ b/environments/oxxx-docker/config.properties
@@ -12,4 +12,5 @@ wsHook.baseUri=http://172.17.0.1:3000
 wsHook.openPath=/open
 wsHook.closePath=/close
 wsHook.retryTimeout=30000
+wsHook.executeCommandResponsePath=/executeCommandResponse
 ccs.ip=172.17.0.3
